# DataBoard

./: README.md  index.html  package.json
src/: App.css  App.tsx  main.tsx  types.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  state.rs
