[package]
name = "aixhc-databoard"
version = "0.0.0"
description = "A Databoard"
authors = ["sdark"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4.21", features = ["std", "serde"] }
polars = { version = "0.40.0", features = ["lazy", "serde", "temporal", "describe", "json", "is_in", "pivot", "partition_by"] }
tauri-plugin-dialog = "2.0.0-beta.7"
tauri-plugin-clipboard-manager = "2.1.0-beta.2"
tauri-plugin-fs = "2.0.0-beta.7"
once_cell = "1.19.0"
regex = "1.10.4"
env_logger = "0.11.3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
debug = false
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.